Fix line height for header title to improve text readability

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -24,7 +24,7 @@
   font-style: normal;
   text-transform: uppercase;
   letter-spacing: -0.02em;
-  line-height: 0.75;
+  line-height: 1;
   color: var(--adriatic-accent);
   margin: 3rem 0 0;
 }
